--- a/FitnessTracker.V1/App.razor
+++ b/FitnessTracker.V1/App.razor
@@ -1,17 +1,19 @@
 ﻿@inject IJSRuntime JS
 @implements IAsyncDisposable
+@using BlazorBootstrap
 
-<Router AppAssembly="@typeof(App).Assembly">
-    <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-    </Found>
-    <NotFound>
-        <LayoutView Layout="@typeof(MainLayout)">
-            <p>Page introuvable.</p>
-        </LayoutView>
-    </NotFound>
-</Router>
-
+<BootstrapProvider>
+    <Router AppAssembly="@typeof(App).Assembly">
+        <Found Context="routeData">
+            <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+        </Found>
+        <NotFound>
+            <LayoutView Layout="@typeof(MainLayout)">
+                <p>Page introuvable.</p>
+            </LayoutView>
+        </NotFound>
+    </Router>
+</BootstrapProvider>
 @if (updateAvailable)
 {
     <div class="alert alert-warning fixed-bottom text-center">
